Debug build is failing after r264537 on Linux https://bugs.webkit.org/show_bug.cgi?id=214596

Reviewed by Yusuke Suzuki.

Removing `ASSERT_UNDER_CONTEXPR_CONTEXT(0)` to avoid compilation
failure of Debug builds on Linux.

* runtime/IntlObject.cpp:
(JSC::relevantExtensionKeyString):


Canonical link: https://commits.webkit.org/227416@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264671 268f45cc-cd09-0410-ab3c-d52691b4dbfc